// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render a custom icon when the icon is a react node 1`] = `
<div
  class="alert info"
>
  <div
    class="iconContainer"
  >
    <img
      alt="custom-icon"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render an alert with a close icon when onClose prop is passed  1`] = `
<div
  class="alert info closable"
>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
  <div
    aria-label="Close Icon"
    class="close"
  >
    <img
      alt="close-icon"
      class="closeIcon"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`<Alert /> should render an alert with a message with a default info type without icon 1`] = `
<div
  class="alert info"
>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render an alert with an icon when icon prop is passed 1`] = `
<div
  class="alert info"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render an alert with custom actions 1`] = `
<div
  class="alert info"
>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
    <div
      class="customActions"
    >
      <button>
        Click this !
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should render icon for error alert type 1`] = `
<div
  class="alert error"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render icon for info alert type 1`] = `
<div
  class="alert info"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render icon for loading alert type 1`] = `
<div
  class="alert loading"
>
  <div
    class="iconContainer"
  >
    <span
      class="loadingIcon"
    >
      <svg
        class="spinner dark"
        preserveAspectRatio="xMidYMid meet"
        role="status"
        viewBox="0 0 20 20"
        width="100%"
      >
        <circle
          class="dot"
          cx="10"
          cy="10"
          fill="none"
          r="6"
          stroke-width="2"
        />
        <circle
          class="circle"
          cx="10"
          cy="10"
          fill="none"
          r="6"
          stroke-width="2"
        />
        <span
          class="sr-only"
        >
          Loading...
        </span>
      </svg>
    </span>
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render icon for success alert type 1`] = `
<div
  class="alert success"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render icon for warning alert type 1`] = `
<div
  class="alert warning"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;
